syntax = "proto3";

package model;

option go_package = "./model";

message Pagination {
    uint64 total = 1;
    uint64 per_page = 2;
    uint64 current_page = 3;
    uint64 last_page = 4;
}